css/header-footer.css
/* ############################################################## */

/* VOR ÄNDERUNGEN IN DIESER DATEI TEAM-MEETING !! */

/* ############################################################## */
/* Last Changes */
/* Footer Padding left and right von 25px auf 10px */
/* Ab 512px header nav bar anzeigen, Footer NavBar aus */
/* Ab 768px Footer Links horizontal

/* ############################################################## */

* {
    margin: 0; /* Alle Abstände auf null setzen */
    padding: 0;
    position: relative;
    box-sizing: border-box;
    color: inherit;
    font-size: inherit;
    scroll-behavior: smooth;
}

header {
    background-color: #4ea487;
    .header-content {
        /* position: absolute;
        width: 100%; */

        height: 70px;
        display: flex;
        align-items: center;
        justify-content: center;
        padding-top: 10px;

        .header-nav-bar {
            display: none;
            padding-left: 50px;
            ul {
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: space-around;
                list-style-type: none;
                gap: 40px;


                
            }
        }

        a {
            font-family: "Arima";
            color: white;
            text-decoration: none;
        }

        a:hover {
            text-decoration-line: underline;
            text-decoration-style: wavy;
            text-decoration-color: #f1c953;
        }

        a.active {
            font-weight: bold;
            color: #f1c953;
        }

        img {
            width: 56px;
            height: 56px;
        }

        li {
            input {
                display: none;
            }

            label {
                cursor: pointer;
                color: #54370d;
            }

            input:checked + label {
                color: #f1c953;
                text-decoration: underline wavy;
            }
        }
    }
}

footer {
    background-color: #4ea487;
    height: 225px;
    width: 100%;

    .footer-content {
        max-width: 1440px;
        margin-left: auto;
        margin-right: auto;

        padding-top: 30px;
        padding-left: 10px;
        padding-right: 10px;
        display: flex;
        justify-content: center;
        align-items: flex-end;

        .footer-left {
            font-family: "Palanquin";
            font-size: 14px;
            width: 100%;
            max-width: 700px;

            color: white;
            line-height: 2;

            a {
                text-decoration: none;
            }
            .copyright {
                display: flex;
                align-items: center;
                gap: 5px;
            }
        }
        .footer-right {
            .social-links {
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: space-between;
                gap: 5px;
            }
        }
    }

    .footer-navigation {
        background-color: #f1c953;
        height: 88px;
        width: 100%;
        display: flex;
        align-items: center;
        justify-content: center;
        position: fixed;
        left: 0;
        bottom: 0;

        .footer-nav-bar {
            max-width: 375px;
            width: 100%;

            ul {
                display: flex;
                flex-direction: row;
                align-items: center;
                justify-content: space-around;
                list-style-type: none;
            }

            img {
                width: 40px;
                height: 40px;
            }
        }
    }
}

@media screen and (min-width: 375px) {
    header {
        .header-content {
            padding-left: 0;
        }
    }
    footer {
        .footer-content {
            padding-left: 25px;
            padding-right: 25px;
        }
    }
}

@media screen and (min-width: 512px) {
    header {
        .header-content {
            align-items: center;
            justify-content: flex-start;
            padding-left: 30px;
            gap: 30px;
            .header-nav-bar {
                display: unset;
            }
        }
    }

    footer {
        height: 150px;

        .footer-navigation {
            display: none;
        }
    }
}

@media screen and (min-width: 768px) {
    header {
        .header-content {
            height: 88px;
        }
    }

    footer {
        .footer-content {
            width: 100%;
            padding-top: 50px;

            display: flex;
            align-items: center;
            justify-content: space-between;

            .footer-left {
                max-width: 700px;
                display: flex;
                flex-direction: row-reverse;
                justify-content: flex-end; /* Flex-end wegen row-reverse */

                gap: 100px;

                p {
                    font-size: 16px;
                }

                .copyright {
                    display: flex;
                    align-items: center;
                }
            }

            .footer-right {
                .social-links {
                    gap: 10px;
                }
            }
        }
    }
}

@media screen and (min-width: 1024px) {
    header {
        .header-content {
            height: 128px;
            max-width: 980px;
            /* justify-content: space-between; */
            margin-left: auto;
            margin-right: auto;
            padding-left: 0px;
            padding-right: 0px;

            img {
                width: 128px;
                height: 128px;
            }
        }
    }
    footer {
        .footer-content {
            .footer-left {
                p {
                    font-size: 20px;
                }
            }
        }
    }
}

@media screen and (min-width: 1440px) {
    header {
        .header-content {
            max-width: 1440px;
            padding-left: 30px;
        }
    }
    footer {
        .footer-content {
            padding-left: 30px;
        }
    }
}

